--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -192,7 +192,7 @@ main {
             "d d e f";
     }
 
-    #chanceOfRainGraph{
+    #chanceOfRainGraph {
         display: flex;
     }
 }
@@ -205,7 +205,7 @@ main {
             "e f";
     }
 
-    #chanceOfRainGraph{
+    #chanceOfRainGraph {
         display: none;
     }
 }
@@ -490,6 +490,7 @@ main {
 .col.tile section {
     display: grid;
     grid-gap: 0.5rem;
+    margin: 1.5rem!important;
 }
 
 .col.tile section>* {
@@ -521,7 +522,7 @@ main {
     --bs-pagination-active-border-color: transparent;
 }
 
-#page{
+#page {
     justify-content: end;
 }
 
@@ -533,9 +534,7 @@ main {
     content: "Next";
 }
 
-#search-form-filter-tags{
-    
-}
+#search-form-filter-tags {}
 
 @media (max-width: 1200px) {
     #aiueo {
@@ -592,20 +591,20 @@ main {
     max-width: 150px;
 }
 
-#main-weather section{
-    grid-template: 
-    "a b" 1fr
-    "a c" 1fr / 1fr 1fr;
+#main-weather section {
+    grid-template:
+        "a b" 1fr
+        "a c" 1fr / 1fr 1fr;
 }
 
 @media (max-width: 992px) {
-    #main-weather section{
-        grid-template: 
-        "a b" 1fr
-        "a b" 1fr / 1fr 1fr;
+    #main-weather section {
+        grid-template:
+            "a b" 1fr
+            "a b" 1fr / 1fr 1fr;
     }
 
-    #chanceOfRain{
+    #chanceOfRain {
         display: none;
     }
 }
@@ -622,13 +621,14 @@ main {
     grid-area: d;
 }
 
-#main-divination section{
-    position: relative;
+#main-divination section {
     grid-template-areas:
-    "r1 r2 r3 r4 r5 r6"
-    "r7 r8 r9 r10 r11 r12 ";
+        "r1 r2 r3  r4  r5  r6"
+        "r7 r8 r9 r10 r11 r12";
     grid-auto-rows: 1fr;
     grid-auto-columns: 1fr;
+
+
 }
 
 #main-alert {
@@ -639,12 +639,12 @@ main {
     grid-area: f;
 }
 
-#chanceOfRainGraph{
+#chanceOfRainGraph {
     display: grid;
     grid-template:
-                "aa .. .. .. .. .. .. .. .." 1fr
-                ".. c1 .. c2 .. c3 .. c4 .." 3fr
-                "t1 .. t2 .. t3 .. t4 .. t5" 1fr;
+        "aa .. .. .. .. .. .. .. .." 1fr
+        ".. c1 .. c2 .. c3 .. c4 .." 3fr
+        "t1 .. t2 .. t3 .. t4 .. t5" 1fr;
     grid-auto-columns: 1rem;
 
     justify-content: center;
@@ -656,65 +656,109 @@ main {
     font-size: small;
 }
 
-
-.chance-rain{
+.chance-rain {
     display: flex;
 
     align-items: end;
     width: 100%;
     height: 100%;
 }
-.chance-rain:hover{
+
+.chance-rain:hover {
     background-color: rgba(var(--box-shadow-color)) !important;
 }
-.chance-rain > div{
+
+.chance-rain>div {
     width: 100%;
     background-color: rgba(var(--box-shadow-color));
     border-color: rgba(var(--box-shadow-color));
     border-style: solid;
     border-width: 1px
 }
-div[chance-rain="100%"] > div{
+
+div[chance-rain="100%"]>div {
     height: 100%;
 }
-div[chance-rain="90%"] > div{
+
+div[chance-rain="90%"]>div {
     height: 90%;
 }
-div[chance-rain="80%"] > div{
+
+div[chance-rain="80%"]>div {
     height: 80%;
 }
-div[chance-rain="70%"] > div{
+
+div[chance-rain="70%"]>div {
     height: 70%;
 }
-div[chance-rain="60%"] > div{
+
+div[chance-rain="60%"]>div {
     height: 60%;
 }
-div[chance-rain="50%"] > div{
+
+div[chance-rain="50%"]>div {
     height: 50%;
 }
-div[chance-rain="40%"] > div{
+
+div[chance-rain="40%"]>div {
     height: 40%;
 }
-div[chance-rain="30%"] > div{
+
+div[chance-rain="30%"]>div {
     height: 30%;
 }
-div[chance-rain="20%"] > div{
+
+div[chance-rain="20%"]>div {
     height: 20%;
 }
-div[chance-rain="10%"] > div{
+
+div[chance-rain="10%"]>div {
     height: 10%;
 }
-div[chance-rain="0%"] > div{
+
+div[chance-rain="0%"]>div {
     height: 0%;
 }
 
-.sign .info{
-    position: absolute;
-    top: 0;
-    left: 0;
+
+.hovering.sign.sign-icon-only {
+    display: none !important;
+}
+
+.sign.sign-icon-only .icons div {
+    display: none;
+}
+
+.sign.sign-icon-only .lucky-stars {
+    display: none;
+}
+
+.sign.sign-icon-only .lucky-item {
+    display: none;
+}
+
+.sign.sign-icon-only .lucky-color {
+    display: none;
+}
+
+.sign.sign-icon-only .content {
+    display: none;
+}
+
+.sign .content {
+    grid-area: e;
+
+
+    border-color: rgba(var(--border-color));
+
+    border-style: solid;
+    border-left: 1px;
+    border-right: 1px;
 }
 
 .icons {
+    grid-area: a;
+
     display: flex;
     flex-direction: column;
 
@@ -723,10 +767,11 @@ div[chance-rain="0%"] > div{
 }
 
 .lucky-item {
+    grid-area: c;
     display: flex;
     flex-direction: row !important;
-    
-    width: 100%;
+
+    width: 75%;
 }
 
 .lucky-item>div {
@@ -744,10 +789,11 @@ div[chance-rain="0%"] > div{
 }
 
 .lucky-color {
+    grid-area: d;
     display: flex;
     flex-direction: row !important;
-    
-    width: 100%;
+
+    width: 75%;
 }
 
 .lucky-color>div {
@@ -763,16 +809,19 @@ div[chance-rain="0%"] > div{
     justify-content: end;
 }
 
-.lucky-stars{
+.lucky-stars {
     display: flex;
     flex-direction: row !important;
+    flex-wrap: wrap;
+    width: 100%;
 }
 
-.stars{
+.stars {
+    grid-area: b;
     display: flex;
     flex-direction: column;
 
-    width: 100%;
+    margin: auto;
     align-items: center;
 }
 
@@ -834,4 +883,19 @@ div[stars="5"]::before {
 
 div[stars="5"]::after {
     content: "";
+}
+
+#main-divination section.hovering {
+    display: block;
+}
+
+#main-divination section.hovering .sign {
+    display: grid;
+    grid-template:
+        "a"
+        "b"
+        "e"
+        "c"
+        "d";
+
 }
