--- a/src/main/resources/static/morning/weather.css
+++ b/src/main/resources/static/morning/weather.css
@@ -110,6 +110,7 @@
 }
 /* 最高気温 */
 .high-temperature{
+	display: flex;
 	text-align: right;
 	color: red;
 	margin-right: 25px;
@@ -118,11 +119,22 @@
 }
 /* 最低気温 */
 .low-temperature{
+	display: flex;
 	color: blue;
 	text-align: right;
 	margin-right: 25px;
 	list-style:none;
 	padding-left:0;
+}
+.temp .left{
+	flex-shrink: 0;
+	width:90px;
+	text-align:left;
+}
+.temp .right{
+	flex-shrink: 0;
+	width:50%;
+	text-align:right;
 }
 /* 天気画像と予報名*/
 .pict{
