--- a/src/main/resources/templates/morning/alert.html
+++ b/src/main/resources/templates/morning/alert.html
@@ -48,7 +48,9 @@
 	</div>
 
 	<!-- タイトル -->
-	<p class="title">札幌市の警報・注意報</p>
+	<div class="weather-telopbox">
+		<p class="terop">札幌市の警報・注意報</p>
+	</div>
 	<div class="title-space"></div>
 
 	<!-- アラートcontext -->
@@ -198,7 +200,7 @@
 			<li><span class="advisory"><span>注 意 報</span></span></li>
 			<li><span class="none-alert"><span>発表なし</span></span></li>
 		</ul>
-		<hr>
+		
 		<div class="special-type">
 			<p>
 				<span class="alarm"><span> 警 報 ! </span></span>
